# rphonetic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  codecov.yml
.github/workflows/: clippy.yml  coverage.yml  new_release.yml  quality.yml  release.yml  rust.yml
benches/: benchmark.rs
examples/: main.rs
src/: caverphone.rs  cologne.rs  constants.rs  daitch_mokotoff.rs  double_metaphone.rs  helper.rs  lib.rs  match_rating_approach.rs  metaphone.rs  nysiis.rs  phonex.rs  refined_soundex.rs  rules_parser.rs  soundex.rs
src/beider_morse/: engine.rs  lang.rs  languages.rs  mod.rs  regex_optim.rs  rule.rs
test_assets/test-include/: gen_exact_any.txt  gen_exact_german.txt
