[package]
name = "rphonetic"
version = "0.0.0"
edition = "2021"
authors = ["dalvany", "Crabe de France"]
description = "Rust port of phonetic Apache commons-codec algorithms"
repository = "https://github.com/Dalvany/rphonetic"
homepage = "https://github.com/Dalvany/rphonetic"
documentation = "https://docs.rs/rphonetic"
readme = "README.md"
license = "Apache-2.0"
categories = ["text-processing", "algorithms"]
keywords = ["phonetic"]
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
enum-iterator = "1.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false