[package]
name = "rphonetic"
version = "2.1.1"
edition = "2021"
authors = ["dalvany", "Crabe de France"]
description = "Rust port of phonetic Apache commons-codec algorithms"
repository = "https://github.com/Dalvany/rphonetic"
homepage = "https://github.com/Dalvany/rphonetic"
documentation = "https://docs.rs/rphonetic"
readme = "README.md"
license = "Apache-2.0"
categories = ["text-processing", "algorithms"]
keywords = ["phonetic"]
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
embedded = ["embedded_bm", "embedded_dm"]
embedded_bm = []
embedded_dm = []

[dependencies]
regex = "1.6"
nom = "7.1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
enum-iterator = "1.1"
either = "1.7"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
