[package]
name = "rphonetic"
version = "2.2.0"
edition = "2021"
rust-version = "1.65.0"
authors = ["dalvany", "Crabe de France"]
description = "Rust port of phonetic Apache commons-codec algorithms"
repository = "https://github.com/Dalvany/rphonetic"
homepage = "https://github.com/Dalvany/rphonetic"
documentation = "https://docs.rs/rphonetic"
readme = "README.md"
license = "Apache-2.0"
categories = ["text-processing", "algorithms"]
keywords = ["phonetic"]
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
#! There is two features that provide default rules and Default implementation for some struct.
#! They are not enabled by default as files are embedded into code, so it might increase binary size. It’s best to provide rules by your own.
## Shorthand for `embedded_bm` and `embedded_dm`
embedded = ["embedded_bm", "embedded_dm"]
## Beider-Morse rules. It includes only `any` language and other files that are required. All file can be found in
## [commons-codec repository](https://github.com/apache/commons-codec/tree/rel/commons-codec-1.15/src/main/resources/org/apache/commons/codec/language/bm)
embedded_bm = []
## Daitch-Mokotoff rules. They can be also found in [commons-codec repository](https://github.com/apache/commons-codec/blob/rel/commons-codec-1.15/src/main/resources/org/apache/commons/codec/language/dmrules.txt)
embedded_dm = []

[dependencies]
regex = "1.6"
nom = "7.1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
enum-iterator = "2.0"
either = "1.7"
document-features = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
